--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
          <section class="weatherParams" id="info-today">
             <div class="info-items-up">
                <div class="info-item-up-left">
-                  <h5>min T</h5>
-                  <img src="images/thermometer.svg" alt="minT_pic" width="23%" height="auto">
+                  <h3>min T</h3>
+                  <img src="images/thermometer.svg" alt="minT_pic" width="30%" height="auto">
                   <p>
                      <span id="min-temp"></span>
                   </p>
                </div>
                <div class="info-item-up-right">
-                  <h5>max T</h5>
-                  <img src="images/thermometer.svg" alt="maxT_pic" width="23%" height="auto">
+                  <h3>max T</h3>
+                  <img src="images/thermometer.svg" alt="maxT_pic" width="30%" height="auto">
                   <p>
                      <span id="max-temp"></span>
                   </p>
@@ -56,15 +56,15 @@
             </div>
             <div class="info-items-down">
                <div class="info-item-down-left">
-                  <h5>humidity</h5>
-                  <img src="images/humidity.svg" alt="humidity_pic" width="23%" height="auto">
+                  <h3>humidity</h3>
+                  <img src="images/humidity.svg" alt="humidity_pic" width="30%" height="auto">
                   <p>
                      <span id="humid"></span>
                   </p>
                </div>
                <div class="info-item-down-right">
-                  <h5>wind speed</h5>
-                  <img src="images/wind.svg" alt="windSpeed_pic" width="23%" height="auto">
+                  <h3>wind speed</h3>
+                  <img src="images/wind.svg" alt="windSpeed_pic" width="30%" height="auto">
                   <p>
                      <span id="wind-speed"></span>
                   </p>
@@ -72,16 +72,16 @@
             </div>
          </section>
          <section class="week-weatherParams invisible" id="week-info">
-            <!-- ovaj deo sa podacima će se pojaviti odabirom opcije prognoze za 5 dana -->
+            <!-- ovaj deo sa podacima će se pojaviti izborom opcije prognoze za 5 dana -->
          </section>
          <section class="navigation">
             <div id="today" class="active-nav">
                <img src="images/one-day-calendar.svg" alt="today_calendar_pic" width="15%" height="auto">
-               <h5>Today</h5>
+               <h3>Today</h3>
             </div>
             <div id="weekly">
                <img src="images/days-calendar.svg" alt="5-days_calendar_pic" width="15%" height="auto">
-               <h5>5 days</h5>
+               <h3>5 days</h3>
             </div>
          </section>
       </div>
